--- a/ITATools/ITATools/MainWindow.xaml
+++ b/ITATools/ITATools/MainWindow.xaml
@@ -4,10 +4,14 @@
         xmlns:local="clr-namespace:ITATools" x:Class="ITATools.MainWindow"
         xmlns:CCvm="clr-namespace:Calendar_Converter.ViewModel;assembly=Calendar_Converter"
         xmlns:CCvw="clr-namespace:Calendar_Converter.View;assembly=Calendar_Converter"
+        xmlns:jcvm="clr-namespace:JunkCodeRemover;assembly=JunkCodeRemover"
         Title="ITA Tools" Height="600" Width="800">
     <Window.Resources>
         <DataTemplate DataType="{x:Type CCvm:MainWindowViewModel}">
             <CCvw:MainWindowView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type jcvm:JunkCodeRemoverViewModel}">
+            <jcvm:JunkCodeRemoverView/>
         </DataTemplate>
     </Window.Resources>
     <Window.Background>
@@ -22,22 +26,27 @@
             <RowDefinition Height="96*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="216"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <TextBlock Text="ITA Tools" HorizontalAlignment="Center" Foreground="White" VerticalAlignment="Center" FontSize="18" FontFamily="Times New Roman" Grid.Column="1" Margin="83,4,221,4" Padding="3" />
         <Border BorderBrush="Gray" BorderThickness=".5" Grid.Row="1" Margin="2">
-            <UniformGrid Columns="1">
+            <StackPanel>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Calendar Converter" Command="{Binding CalendarConverterCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Junk Code Removal" Command="{Binding HTMLSanitizeCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Code Creator" Command="{Binding CodeGeneratorCommand}"/>
-            </UniformGrid>
+            </StackPanel>
         </Border>
         <Border BorderBrush="Gray" BorderThickness=".5" Margin="2" Grid.Column="1" Grid.Row="1">
             <Viewbox>
                 <ItemsControl ItemsSource="{Binding CurrentViewModel}" Margin="2"/>
             </Viewbox>
         </Border>
-        <Button Grid.Column="1" HorizontalAlignment="Right" Width="20" Height="20" VerticalAlignment="Center" Margin="5"/>
+        <Button Grid.Column="1" HorizontalAlignment="Right" Width="20" Height="20" VerticalAlignment="Center" Margin="5" Command="{Binding SettingsCommand}">
+            <Button.Background>
+                <ImageBrush ImageSource="Resources/favicon.ico"/>
+            </Button.Background>
+        </Button>
+        <Image Source="Resources/wsu-globalcampus-signature-primary.png"  />
     </Grid>
 </Window>
