--- a/ITATools/ITATools/MainWindow.xaml
+++ b/ITATools/ITATools/MainWindow.xaml
@@ -37,11 +37,9 @@
                 <Button BorderBrush="{x:Null}" IsEnabled="False" Visibility="Hidden" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Code Creator" Command="{Binding CodeGeneratorCommand}"/>
             </StackPanel>
         </Border>
-        <Border BorderBrush="Gray" BorderThickness=".5" Margin="2" Grid.Column="1" Grid.Row="1">
-            <Viewbox>
-                <ItemsControl ItemsSource="{Binding CurrentViewModel}" Margin="2"/>
-            </Viewbox>
-        </Border>
+        <ScrollViewer  Margin="2" Grid.Column="1" Grid.Row="1">
+            <ContentControl Content="{Binding CurrentViewModel}" />
+        </ScrollViewer>
         <Button Grid.Column="1" HorizontalAlignment="Right" Width="20" Height="20" VerticalAlignment="Center" Margin="5" Command="{Binding SettingsCommand}">
             <Button.Background>
                 <ImageBrush ImageSource="Resources/favicon.ico"/>
