--- a/ITATools/ITATools/View/HomeView.xaml
+++ b/ITATools/ITATools/View/HomeView.xaml
@@ -6,6 +6,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="ITA Tools for daily use." Foreground="White"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="47*" />
+            <RowDefinition Height="253*" />
+        </Grid.RowDefinitions>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" Text="{Binding WelcomeMessage}" Foreground="White" Grid.Row="1" />
     </Grid>
 </UserControl>
