--- a/ITATools/ITATools/MainWindow.xaml
+++ b/ITATools/ITATools/MainWindow.xaml
@@ -34,9 +34,9 @@
             <ColumnDefinition Width="216"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="ITA Tools" HorizontalAlignment="Center" Foreground="White" VerticalAlignment="Center" FontSize="32" FontFamily="Times New Roman" Grid.Column="1"  Padding="3" />
-        <Border BorderBrush="Gray" BorderThickness=".5" Grid.Row="1" Margin="2">
-            <StackPanel>
+        <TextBlock Text="ITA Tools" HorizontalAlignment="Center" Foreground="White" VerticalAlignment="Center" FontSize="32" FontFamily="Century Schoolbook" Grid.Column="1"  Padding="3" />
+        <Border BorderBrush="Gray" BorderThickness=".5" Grid.Row="1" Margin="2, 20, 2, 2">
+            <StackPanel >
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Home" Command="{Binding HomeCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Calendar Converter" Command="{Binding CalendarConverterCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Junk Code Removal" Command="{Binding HTMLSanitizeCommand}"/>
