Updates to Junk code Remover, using a different HTML Sanitizer that can handle self closing tags.

--- a/ITATools/ITATools/MainWindow.xaml
+++ b/ITATools/ITATools/MainWindow.xaml
@@ -43,9 +43,7 @@
                 <Button BorderBrush="{x:Null}" IsEnabled="False" Visibility="Hidden" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Code Creator" Command="{Binding CodeGeneratorCommand}"/>
             </StackPanel>
         </Border>
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="2" Grid.Column="1" Grid.Row="1">
-            <ContentControl Content="{Binding CurrentViewModel}" />
-        </ScrollViewer>
+        <ContentControl Content="{Binding CurrentViewModel}" Margin="2" Grid.Column="1" Grid.Row="1" />
         <Button Grid.Column="1" HorizontalAlignment="Right" Width="20" Height="20" VerticalAlignment="Center" Margin="5" Command="{Binding SettingsCommand}">
             <Button.Background>
                 <ImageBrush ImageSource="Resources/favicon.ico"/>
