--- a/ITATools/ITATools/MainWindow.xaml
+++ b/ITATools/ITATools/MainWindow.xaml
@@ -1,10 +1,13 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:s="clr-namespace:System;assembly=mscorlib" 
+        xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
         xmlns:local="clr-namespace:ITATools" x:Class="ITATools.MainWindow"
         xmlns:CCvm="clr-namespace:Calendar_Converter.ViewModel;assembly=Calendar_Converter"
         xmlns:CCvw="clr-namespace:Calendar_Converter.View;assembly=Calendar_Converter"
         xmlns:jcvm="clr-namespace:JunkCodeRemover;assembly=JunkCodeRemover"
+        xmlns:cg="clr-namespace:CodeGenerator;assembly=CodeGenerator"
         xmlns:vm="clr-namespace:ITATools.ViewModel"
         xmlns:vw="clr-namespace:ITATools.View"
         Title="ITA Tools" Height="800" Width="1000">
@@ -17,6 +20,9 @@
         </DataTemplate>
         <DataTemplate DataType="{x:Type vm:HomeViewModel}">
             <vw:HomeView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type cg:CodeGeneratorViewModel}">
+            <cg:UserControl1/>
         </DataTemplate>
     </Window.Resources>
     <Window.Background>
@@ -40,7 +46,7 @@
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Home" Command="{Binding HomeCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Calendar Converter" Command="{Binding CalendarConverterCommand}"/>
                 <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Junk Code Removal" Command="{Binding HTMLSanitizeCommand}"/>
-                <Button BorderBrush="{x:Null}" IsEnabled="False" Visibility="Hidden" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Code Creator" Command="{Binding CodeGeneratorCommand}"/>
+                <Button BorderBrush="{x:Null}" Foreground="White" Background="{x:Null}" Margin="5" Height="20" Content="Code Creator" Command="{Binding CodeGeneratorCommand}"/>
             </StackPanel>
         </Border>
         <ContentControl Content="{Binding CurrentViewModel}" Margin="2" Grid.Column="1" Grid.Row="1" />
